# libspp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: install.cmake  libserialport.cmake
examples/: CMakeLists.txt  configure_port.cpp  list_ports.cpp  send_and_receive.cpp
inc/: libserialport.hpp
src/: CMakeLists.txt  config.h.in  libserialport.cpp
test/: CMakeLists.txt  integration_test.cpp  libserialport_mock.cpp  libserialport_mock.hpp  unit_test_exceptions.cpp  unit_test_logic.cpp  unit_test_memory.cpp
